--- a/CellWallClient/app/src/main/res/values/strings.xml
+++ b/CellWallClient/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
+    <string name="app_name_main">CellWall</string>
     <string name="app_name">CellWall Client</string>
     <string name="prompt_address">Address</string>
     <string name="address_hint">HTML Address of your CellWall Server.</string>
@@ -9,4 +10,7 @@
     <string name="error_field_required">This field is required</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="dummy_content">Dummy\nContent</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
