--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -22,4 +22,6 @@
     <string name="debug_density">Density: %1$f</string>
     <string name="debug_display">Display: %1$dx%2$d</string>
     <string name="debug_display_dp">Display: %1$ddp x %2$ddp</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
